--- a/projects/projects.json
+++ b/projects/projects.json
@@ -13,7 +13,7 @@
     {
       "name": "Grocery Store Data Analysis and Visualization",
       "desc": "This project is designed to help grocery store managers understand customer purchasing behavior by cleaning and processing data collected from store transactions",
-      "image": "R project",
+      "image": "data_science_project_2v4-01.jpg",
       "category": "Data Analysis and Visualization",
       "links": {
         "view": "https://github.com/ashrafeesa/Grocery-Store-Data-Analysis-and-Visualization",
