--- a/projects/projects.json
+++ b/projects/projects.json
@@ -3,7 +3,7 @@
     {
       "name": "EDA for Titanic Dataset",
       "desc": "The main objective of this task was to perform data cleaning and exploratory data analysis to gain insights into the Titanic dataset",
-      "image": "projects/EDA.jpg",
+      "image": "https://miro.medium.com/v2/resize:fit:700/1*ElKrda7R01ul9Afy8Zdbuw.png",
       "category": "EDA",
       "links": {
         "view": "https://www.linkedin.com/posts/ashraf-k-eesa-b8b8802b4_prodigyinfotech-internship-datascience-activity-7215387243656470530-IM_d?utm_source=share&utm_medium=member_desktop",
@@ -13,7 +13,7 @@
     {
       "name": "Grocery Store Data Analysis and Visualization",
       "desc": "This project is designed to help grocery store managers understand customer purchasing behavior by cleaning and processing data collected from store transactions",
-      "image": "data_science_project_2v4-01.jpg",
+      "image": "https://miro.medium.com/v2/resize:fit:1100/format:webp/1*5CNDL9w3ba-7mp4NMbveOA.png",
       "category": "Data Analysis and Visualization",
       "links": {
         "view": "https://github.com/ashrafeesa/Grocery-Store-Data-Analysis-and-Visualization",
