--- a/projects/projects.json
+++ b/projects/projects.json
@@ -3,7 +3,7 @@
     {
       "name": "EDA for Titanic Dataset",
       "desc": "The main objective of this task was to perform data cleaning and exploratory data analysis to gain insights into the Titanic dataset",
-      "image": "https://miro.medium.com/v2/resize:fit:700/1*ElKrda7R01ul9Afy8Zdbuw.png",
+      "image": "EDA.jpg",
       "category": "EDA",
       "links": {
         "view": "https://www.linkedin.com/posts/ashraf-k-eesa-b8b8802b4_prodigyinfotech-internship-datascience-activity-7215387243656470530-IM_d?utm_source=share&utm_medium=member_desktop",
